<resources>
    <string name="app_name">KotlinFundamentals</string>
    <!-- AboutMe -->
    <string name="text_view_title">Omori Rio Emporio</string>
    <string name="bio">Hi, my name is Omori.
    \n\nI love fish.
    \n\nThe kind that is alive and swims around in an aquarium or river, or a lake, and definitely the ocean.
    \nFun fact is that I have several aquariums and also a river.
    \n\nI like eating fish, too. Raw fish. Grilled fish. Smoked fish. Poached fish - not so much.
    \nAnd sometimes I even go fishing.
    \nAnd even less sometimes, I actually catch something.
    \n\nOnce, when I was camping in Canada, and very hungry, I even caught a large salmon with my hands.
    \n\nI\'ll be happy to teach you how to make your own aquarium.
    \nYou should ask someone else about fishing, though.\n\n
    </string>
    <string name="what_is_your_nickname">What is your Nickname?</string>
    <string name="done">Done</string>
    <!-- DiceRoller -->
    <string name="button_text_roll">roll</string>
    <!-- ColorMyView -->
    <string name="box_one">Box One</string>
    <string name="box_two">Box Two</string>
    <string name="box_three">Box Three</string>
    <string name="box_four">Box Four</string>
    <string name="box_five">Box Five</string>
    <string name="how_to_play">How to play:</string>
    <string name="tap_the_boxes_and_buttons">Tap the screen and buttons.</string>
    <string name="button_red">RED</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_green">GREEN</string>
    <!-- AndroidTrivia -->
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="android_trivia">Android Trivia</string>
    <string name="about_text">Android Trivia will help remind you of important concepts you have learned and will learn in Android development.\n\nConsider modifying the questions and graphics to make this game your own!</string>
    <string name="rules_text">Select the answer from the options given. Each time you get an answer correct, you advance to the next question.\n\nIf you get the answer wrong, your game ends! You can return to the title screen using up or back from within the game screen, and this will also end your game.</string>
    <string name="rules">Rules</string>
    <string name="about">About</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_android_trivia_question">Android Trivia (%1$d/%2$d)</string>
    <string name="title_about_trivia">About Trivia</string>
    <string name="title_trivia_rules">Trivia Rules</string>
    <string name="share_success_text">I mastered #UdacityAndroidTrivia with %1$d/%2$d correct questions!</string>
    <string name="submit_button">Submit</string>
    <string name="congratulations">Congratulations!</string>
    <string name="share">Share</string>
    <string name="sharing_not_available">Sharing Not Available</string>
    <!-- GuessWordGame -->
    <string name="get_ready">Get ready to</string>
    <string name="guess_word_title">guess the word!!</string>
    <string name="play">play</string>
    <string name="skip">Skip</string>
    <string name="play_again">Play Again</string>
    <string name="you_scored">You Scored</string>
    <string name="title_text">guess the word!</string>
    <string name="play_button">Play</string>
    <string name="got_it">Got it</string>
    <string name="end_game">End game</string>
    <string name="word_is">The word is…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
